completed controller functions
