# routes/api/products.js
@@ -1,9 +1,11 @@
 const express = require('express');
 const router = express.Router();
-const {createProduct} = require('../../controller/product');
+const {createProduct, getProducts, deleteProduct, editProduct} = require('../../controller/product');
 
-
+router.get("/", getProducts);
 router.post("/create", createProduct);
+router.patch("/edit/:productid", editProduct);
+router.delete("/delete/:productid", deleteProduct);
 
 
 module.exports = router;
